Added info about debugging tests to the README